--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.HomeTrainee"></activity>
+        <activity android:name=".Activities.HomeCoach"></activity>
+        <activity android:name=".Activities.HomeTrainee" />
         <activity android:name=".Activities.HomeCouch" />
         <activity android:name=".Activities.RegisterTrainee" />
         <activity android:name=".Activities.RegisterCouch" />
