--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.HomeTrainee"></activity>
-        <activity android:name=".Activities.HomeCouch" />
+        <activity android:name=".Activities.NewWorkout" />
+        <activity android:name=".Activities.HomeTrainee" />
+        <activity android:name=".Activities.HomeCoach" />
         <activity android:name=".Activities.RegisterTrainee" />
         <activity android:name=".Activities.RegisterCouch" />
         <activity android:name=".Activities.LogIn">
