--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.CoachHome"
-            android:label="@string/title_activity_asdasd"
+            android:name=".TraineeHome"
+            android:label="@string/title_activity_trainee_home"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".Activities.ChooseWorkout" />
-        <activity android:name=".Activities.NewWorkout" />
+        <activity
+            android:name=".CoachHome"
+            android:label="@string/title_activity_asdasd"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Activities.RegisterTrainee" />
         <activity android:name=".Activities.RegisterCoach" />
         <activity android:name=".Activities.LogIn">
